--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -329,7 +329,7 @@
   "sign.file.no": "No sign",
   "sys.processing": "Processing",
   "nhap_sdt": "Enter phone",
-  "to_chuc_cua_toi": "My organization",
+  "to_chuc_cua_toi": "MY ORGANIZATION",
   "note_chon_loai_ki_so": "Warning: You only choose one type of digital sign!",
   "doi_tac": "Partner",
   "xoa_doi_tac_to_chuc": "Delete organization partner",
@@ -422,6 +422,44 @@
   "not.select.contract":"You have not selected any contract yet",
   "select.signer.obj":"Please select a signer for the drag-and-drop object!",
   "miss.digital.sig":"Missing digital signature object",
-  "off.org.please":"của tổ chức, vui lòng chọn đủ người ký!",
-  "sign.ekyc.app":"Please sign eKYC on mobile app"
+  "off.org.please":"off organization, please choose enough people to sign",
+  "sign.ekyc.app":"Please sign eKYC on mobile app",
+  "choose.network":"Choose network operator",
+  "network.operator":"Network operator",
+  "sign.day":"Sign day",
+  "sign.by":"Sign by",
+  "password.level1":"Password level 1",
+  "password.level2":"Password level 2",
+  "password.level1.blank":"Level 1 password cannot be blank",
+  "password.level2.blank":"Level 2 password cannot be blank",
+  "user.blank":"User cannot be blank",
+  "username":"Username",
+  "taxcode.blank":"Tax code cannot be blank",
+  "taxcode.format":"Tax code is not in the correct format",
+  "package.information":"PACKAGE INFORMATION",
+  "contract.used":"Number of contracts used:",
+  "ekyc.used":"Number of eKYC used:",
+  "contract.purchased":"Number of contracts purchased:",
+  "ekyc.purchased":"Number of eKYC purchased:",
+  "sms.purchased":"Number of SMS purchased:",
+  "sms.used":"Number of SMS used",
+  "information.signatures":"INFORMATION OF THE SIGNATURES",
+  "contract.number.lot":"CONTRACT NUMBER BY LOT",
+  "ok.sign":"Ok and sign",
+  "multi.sign.question":"Are you sure agree to the content and terms of all contracts and to use electronic methods to make transactions?",
+  "alert":"ALERT",
+  "password.enter":"Enter password",
+  "username.enter":"Enter username",
+  "contract.review":"CONTRACT REVIEW",
+  "choose.role":"Choose roles",
+  "sign.success":"Sign successfully",
+  "taxcode.not.match":"Tax code does not match",
+  "components":"THE COMPONENTS",
+  "drag-drop":"DRAG AND DROP",
+  "attribute":"ATTRIBUTE",
+  "attribute.name":"Attribute name",
+  "position.coordinate":"Position",
+  "size":"Size",
+  "height":"Height",
+  "width":"Width"
 }
