--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -383,7 +383,7 @@
   "side":"Bên",
   "cancel":"Huỷ",
   "type_of_sign":"Loại ký",
-  "sign_by_token":"Ký số bằng USB Token",
+  "sign_by_token":"Ký số bằng Token",
   "sign_by_pki":"Ký số bằng PKI",
   "sign_by_hsm":"Ký số bằng HSM",
   "sign_by_eKYC":"Ký bằng eKYC",
@@ -423,5 +423,43 @@
   "off.org.please":"của tổ chức, vui lòng chọn đủ người ký!",
   "sign.ekyc.app":"Vui lòng ký eKYC trên ứng dụng điện thoại",
   "authorization":"Uỷ quyền",
-  "forward":"Chuyển tiếp"
+  "forward":"Chuyển tiếp",
+  "choose.network":"Chọn nhà mạng",
+  "network.operator":"Nhà mạng",
+  "confirm":"Xác nhận",
+  "sign.day":"Ngày ký",
+  "sign.by":"Ký bởi",
+  "password.level1":"Mật khẩu cấp 1",
+  "password.level2":"Mật khẩu cấp 2",
+  "password.level1.blank":"Mật khẩu cấp 1 không được để trống",
+  "password.level2.blank":"Mật khẩu cấp 2 không được để trống",
+  "user.blank":"Tên người dùng không dược để trống",
+  "username":"Tên người dùng",
+  "taxcode.blank":"Mã số thuế không được để trống",
+  "taxcode.format":"Mã số thuế không đúng định dạng",
+  "package.information":"THÔNG TIN GÓI CƯỚC",
+  "contract.used":"Số lượng hợp đồng đã sử dụng:",
+  "ekyc.used":"Số lượng eKYC đã sử dụng:",
+  "contract.purchased":"Số lượng hợp đồng đã mua:",
+  "ekyc.purchased":"Số lượng eKYC đã mua:",
+  "sms.purchased":"Số lượng SMS đã mua",
+  "sms.used":"Số lượng SMS đã sử dụng",
+  "information.signatures":"THÔNG TIN CÁC BÊN KÝ",
+  "contract.number.lot":"SỐ HỢP ĐỒNG THEO LÔ",
+  "ok.sign":"Đồng ý và ký",
+  "multi.sign.question":"Bạn có chắc chắn đồng ý với nội dung, điều khoản của tất cả các hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?",
+  "alert":"CẢNH BÁO",
+  "password.enter":"Nhập mật khẩu",
+  "username.enter":"Nhập tên người dùng",
+  "contract.review":"XEM XÉT HỢP ĐỒNG",
+  "choose.role":"Chọn vai trò",
+  "sign.success":"Ký số thành công",
+  "taxcode.not.match":"Mã số thuế không trùng khớp",
+  "components":"CÁC THÀNH PHẦN",
+  "drag-drop":"KÉO THẢ",
+  "attribute":"THUỘC TÍNH",
+  "attribute.name":"Tên trường",
+  "position.coordinate":"Vị trí",
+  "size":"Kích thước",
+  "height":"Chiều dài"
 }
