--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -471,5 +471,6 @@
   "sign.by.pki":"Ký số bằng Sim PKI",
   "sign.image.otp":"Ký ảnh và OTP",
   "sign.image.ekyc":"Chữ ký ảnh hoặc eKYC",
-  "sign.digital":"Chữ ký số"
+  "sign.digital":"Chữ ký số",
+  "auto.scroll":"Tìm vị trí"
 }
