Giao diện danh sách thông báo 1 người ký

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -470,5 +470,6 @@
   "sign.by.pki":"Sign by Sim PKI",
   "sign.image.otp":"Sign image and OTP",
   "sign.image.ekyc":"Sign image or eKYC",
-  "sign.digital":"Sign digital"
+  "sign.digital":"Sign digital",
+  "auto.scroll":"Auto scroll"
 }
