gui sms & email

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -285,7 +285,7 @@
   "btn.next": "Next",
   "btn.previous": "Previous",
   "btn.save": "Save",
-  "btn.save-draff": "Save draff",
+  "btn.save-draft": "Save draft",
   "btn.update": "Update",
   "btn.close": "Close",
   "btn.cancel": "Cancel",
