--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -287,7 +287,7 @@
   "btn.next": "Tiếp theo",
   "btn.previous": "Quay lại",
   "btn.save": "Lưu lại",
-  "btn.save-draff": "Lưu nháp",
+  "btn.save-draft": "Lưu nháp",
   "btn.update": "Cập nhật",
   "btn.close": "Đóng",
   "btn.cancel": "Hủy bỏ",
