--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -486,9 +486,16 @@
     "Đang điều phối":"Coordinator",
     "Đang xem xét": "Considering",
     "view.reason":"Reason",
-    "resend.sms.email":"Resend Sms & Email",
+    "resend.sms.email":"Resend Sms/Email",
     "author.handing":"AUTHORIZATION OF HANDLING",
     "Chưa ký":"Unsigned",
     "stop.releasing":"Stop releasing",
-    "choose.template.contract": "Choose template contract"
+    "choose.template.contract": "Choose template contract",
+    "old.password.not.blank":"Old password cannot be blank",
+    "new.password.not.blank":"New password cannot be blank",
+    "confirm.new.password.not.blank":"Confirm new password cannot be blank",
+    "no.contract.involved":"No contract involved",
+    "file.not.empty":"The document file cannot be empty!",
+    "contract.template.name.not.blank":"Contract template name cannot be blank!",
+    "send.sms.email":"Send Sms/Email Success!"
 }
