--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -488,8 +488,16 @@
     "Đang điều phối":"Đang điều phối",
     "Đang xem xét":"Đang xem xét",
     "view.reason":"Xem lý do",
-    "resend.sms.email":"Gửi lại Sms & Email",
+    "resend.sms.email":"Gửi lại Sms/Email",
     "Chưa ký":"Chưa ký",
     "stop.releasing":"Ngừng phát hành",
-    "choose.template.contract":"Chọn mẫu hợp đồng"
+    "choose.template.contract":"Chọn mẫu hợp đồng",
+    "old.password.not.blank":"Mật khẩu cũ không được để trống",
+    "new.password.not.blank":"Mật khẩu mới không được để trống",
+    "confirm.new.password.not.blank":"Xác nhận mật khẩu mới không được để trống",
+    "no.contract.involved":"Không có hợp đồng liên quan",
+    "file.not.empty":"File tài liệu không được để trống!",
+    "contract.template.name.not.blank":"Tên mẫu hợp đồng không được để trống!",
+    "send.sms.email":"Gửi Email/SMS thành công!"
+
 }
