--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -498,6 +498,7 @@
     "no.contract.involved":"Không có hợp đồng liên quan",
     "file.not.empty":"File tài liệu không được để trống!",
     "contract.template.name.not.blank":"Tên mẫu hợp đồng không được để trống!",
-    "send.sms.email":"Gửi Email/SMS thành công!"
+    "send.sms.email":"Gửi Email/SMS thành công!",
+    "change.password":"ĐỔI MẬT KHẨU"
 
 }
