--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -485,7 +485,7 @@
   "Đang điều phối":"Đang điều phối",
   "Đang xem xét":"Đang xem xét",
   "view.reason":"Xem lý do",
-  "resend.sms.email":"Gửi lại Sms & Email",
+  "resend.sms.email":"Gửi lại Sms/Email",
   "Chưa ký":"Chưa ký",
   "stop.releasing":"Ngừng phát hành",
   "choose.template.contract":"Chọn mẫu hợp đồng",
