--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -485,7 +485,7 @@
   "Đang điều phối":"Coordinator",
   "Đang xem xét": "Considering",
   "view.reason":"Reason",
-  "resend.sms.email":"Resend Sms & Email",
+  "resend.sms.email":"Resend Sms/Email",
   "author.handing":"AUTHORIZATION OF HANDLING",
   "Chưa ký":"Unsigned",
   "stop.releasing":"Stop releasing",
