giao diện font size mẫu hợp đồng

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -497,5 +497,6 @@
   "file.not.empty":"The document file cannot be empty!",
   "contract.template.name.not.blank":"Contract template name cannot be blank!",
   "send.sms.email":"Send Sms/Email Success!",
-  "change.password":"CHANGE PASSWORD"
+  "change.password":"CHANGE PASSWORD",
+  "choose.font":"Choose font"
 }
