--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -499,6 +499,9 @@
     "file.not.empty":"File tài liệu không được để trống!",
     "contract.template.name.not.blank":"Tên mẫu hợp đồng không được để trống!",
     "send.sms.email":"Gửi Email/SMS thành công!",
-    "change.password":"ĐỔI MẬT KHẨU"
-
+    "change.password":"ĐỔI MẬT KHẨU",
+    "please.choose.contract.template":"Vui lòng chọn mẫu hợp đồng!",
+    "please.choose.contract.name":"Vui lòng nhập tên hợp đồng!",
+    "Sign.expiration.date.compare":"Ngày hết hạn ký không được nhỏ hơn ngày hiện tại!",
+    "update.person-process": "Cập nhật người xử lý"
 }
