ceca loại hợp đồng

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -370,139 +370,141 @@
   "notify_have_not_sign_acc": "You don't have a signed photo from your account!",
   "contract_processing_flow": "Contract processing flow",
   "not_search_file_attach": "Attached file not found, please check again!",
-  "typeOfSignEmail":"Login by email",
-  "typeOfSignPhone":"Login by phone",
-  "success_sign":"Success sign",
-  "success_watch":"Success watch",
-  "unit.id":"ID",
-  "my.contract":"My contract",
-  "org.contract":"Organization's contract",
-  "choose.contract":"Choose contract",
-  "choose.contract.type":"Choose type of contract",
-  "side":"Side",
-  "cancel":"Cancel",
-  "type_of_sign":"Type of sign",
-  "sign_by_token":"Sign by USB Token",
-  "sign_by_pki":"Sign by PKI",
-  "sign_by_hsm":"Sign by HSM",
-  "sign_by_eKYC":"Sign by eKYC",
-  "sign_by_otp":"Sign by OTP",
-  "sign.multi":"Sign multi",
-  "not.have.sample.file":"You don't have a sample file?",
-  "download.sample.file":"Download sample file",
-  "expire.date.contract":"Contract expiration date",
-  "enter.contract.no":"Enter contract code",
-  "enter.contract.name":"Enter contract name",
-  "choose.expire.date":"Choose expire date",
-  "tax_code.cardId":"Tax code/Card Id",
-  "info.token":"Information in USB Token",
-  "enter.tax_code.cardId":"Enter tax code or card id",
-  "enter.tax.code":"Enter tax code",
-  "enter.cardId":"Enter card id",
-  "cardId":"Card Id",
-  "enter.note":"Enter note",
-  "only.match.email.org":"Only match email in the same organization",
-  "parent.unit":"Parent unit",
-  "child.unit":"Children unit",
-  "receive.contract.process":"Receive notify when process contract",
-  "all":"All",
-  "contract.detail":"CONTRACT DETAIL",
-  "reasson.cancel.contract":"Reason for contract cancellation",
-  "cancel.contract.question":"Are you sure you want to cancel this contract?",
-  "exit":"Exit",
-  "relate.party":"Related parties",
-  "authorization":"Authorization",
-  "forward":"Forward",
-  "confirm":"Confirm",
-  "contract.sign.confirm":"CONFIRM SIGN CONTRACT",
-  "content.confirm":"Do you agree to the content, terms of the contract and the use of electronic methods to make transactions?",
-  "orginator":"Orginator",
-  "delete.contract.question":"Are you sure you want to delete this contract?",
-  "choose.org":"Choose an organization",
-  "not.select.contract":"You have not selected any contract yet",
-  "select.signer.obj":"Please select a signer for the drag-and-drop object!",
-  "miss.digital.sig":"Missing digital signature object",
-  "off.org.please":"off organization, please choose enough people to sign",
-  "sign.ekyc.app":"Please sign eKYC on mobile app",
-  "choose.network":"Choose network operator",
-  "network.operator":"Network operator",
-  "sign.day":"Sign day",
-  "sign.by":"Sign by",
-  "password.level1":"Password level 1",
-  "password.level2":"Password level 2",
-  "password.level1.blank":"Level 1 password cannot be blank",
-  "password.level2.blank":"Level 2 password cannot be blank",
-  "user.blank":"User cannot be blank",
-  "username":"Username",
-  "taxcode.blank":"Tax code cannot be blank",
-  "taxcode.format":"Tax code is not in the correct format",
-  "package.information":"PACKAGE INFORMATION",
-  "contract.used":"Number of contracts used:",
-  "ekyc.used":"Number of eKYC used:",
-  "contract.purchased":"Number of contracts purchased:",
-  "ekyc.purchased":"Number of eKYC purchased:",
-  "sms.purchased":"Number of SMS purchased:",
-  "sms.used":"Number of SMS used",
-  "information.signatures":"INFORMATION OF THE SIGNATURES",
-  "contract.number.lot":"CONTRACT NUMBER BY LOT",
-  "ok.sign":"Ok and sign",
-  "multi.sign.question":"Are you sure agree to the content and terms of all contracts and to use electronic methods to make transactions?",
-  "alert":"ALERT",
-  "password.enter":"Enter password",
-  "username.enter":"Enter username",
-  "contract.review":"CONTRACT REVIEW",
-  "choose.role":"Choose roles",
-  "sign.success":"Sign successfully",
-  "taxcode.not.match":"Tax code does not match",
-  "components":"THE COMPONENTS",
-  "drag-drop":"DRAG AND DROP",
-  "attribute":"ATTRIBUTE",
-  "attribute.name":"Attribute name",
-  "position.coordinate":"Position",
-  "size":"Size",
-  "height":"Height",
-  "width":"Width",
-  "sign.eKYC":"Sign eKYC",
-  "choose.signer":"Choose signer",
-  "choose.importer":"Choose importer",
+  "typeOfSignEmail": "Login by email",
+  "typeOfSignPhone": "Login by phone",
+  "success_sign": "Success sign",
+  "success_watch": "Success watch",
+  "unit.id": "ID",
+  "my.contract": "My contract",
+  "org.contract": "Organization's contract",
+  "choose.contract": "Choose contract",
+  "choose.contract.type": "Choose type of contract",
+  "side": "Side",
+  "cancel": "Cancel",
+  "type_of_sign": "Type of sign",
+  "sign_by_token": "Sign by USB Token",
+  "sign_by_pki": "Sign by PKI",
+  "sign_by_hsm": "Sign by HSM",
+  "sign_by_eKYC": "Sign by eKYC",
+  "sign_by_otp": "Sign by OTP",
+  "sign.multi": "Sign multi",
+  "not.have.sample.file": "You don't have a sample file?",
+  "download.sample.file": "Download sample file",
+  "expire.date.contract": "Contract expiration date",
+  "enter.contract.no": "Enter contract code",
+  "enter.contract.name": "Enter contract name",
+  "choose.expire.date": "Choose expire date",
+  "tax_code.cardId": "Tax code/Card Id",
+  "info.token": "Information in USB Token",
+  "enter.tax_code.cardId": "Enter tax code or card id",
+  "enter.tax.code": "Enter tax code",
+  "enter.cardId": "Enter card id",
+  "cardId": "Card Id",
+  "enter.note": "Enter note",
+  "only.match.email.org": "Only match email in the same organization",
+  "parent.unit": "Parent unit",
+  "child.unit": "Children unit",
+  "receive.contract.process": "Receive notify when process contract",
+  "all": "All",
+  "contract.detail": "CONTRACT DETAIL",
+  "reasson.cancel.contract": "Reason for contract cancellation",
+  "cancel.contract.question": "Are you sure you want to cancel this contract?",
+  "exit": "Exit",
+  "relate.party": "Related parties",
+  "authorization": "Authorization",
+  "forward": "Forward",
+  "confirm": "Confirm",
+  "contract.sign.confirm": "CONFIRM SIGN CONTRACT",
+  "content.confirm": "Do you agree to the content, terms of the contract and the use of electronic methods to make transactions?",
+  "orginator": "Orginator",
+  "delete.contract.question": "Are you sure you want to delete this contract?",
+  "choose.org": "Choose an organization",
+  "not.select.contract": "You have not selected any contract yet",
+  "select.signer.obj": "Please select a signer for the drag-and-drop object!",
+  "miss.digital.sig": "Missing digital signature object",
+  "off.org.please": "off organization, please choose enough people to sign",
+  "sign.ekyc.app": "Please sign eKYC on mobile app",
+  "choose.network": "Choose network operator",
+  "network.operator": "Network operator",
+  "sign.day": "Sign day",
+  "sign.by": "Sign by",
+  "password.level1": "Password level 1",
+  "password.level2": "Password level 2",
+  "password.level1.blank": "Level 1 password cannot be blank",
+  "password.level2.blank": "Level 2 password cannot be blank",
+  "user.blank": "User cannot be blank",
+  "username": "Username",
+  "taxcode.blank": "Tax code cannot be blank",
+  "taxcode.format": "Tax code is not in the correct format",
+  "package.information": "PACKAGE INFORMATION",
+  "contract.used": "Number of contracts used:",
+  "ekyc.used": "Number of eKYC used:",
+  "contract.purchased": "Number of contracts purchased:",
+  "ekyc.purchased": "Number of eKYC purchased:",
+  "sms.purchased": "Number of SMS purchased:",
+  "sms.used": "Number of SMS used",
+  "information.signatures": "INFORMATION OF THE SIGNATURES",
+  "contract.number.lot": "CONTRACT NUMBER BY LOT",
+  "ok.sign": "Ok and sign",
+  "multi.sign.question": "Are you sure agree to the content and terms of all contracts and to use electronic methods to make transactions?",
+  "alert": "ALERT",
+  "password.enter": "Enter password",
+  "username.enter": "Enter username",
+  "contract.review": "CONTRACT REVIEW",
+  "choose.role": "Choose roles",
+  "sign.success": "Sign successfully",
+  "taxcode.not.match": "Tax code does not match",
+  "components": "THE COMPONENTS",
+  "drag-drop": "DRAG AND DROP",
+  "attribute": "ATTRIBUTE",
+  "attribute.name": "Attribute name",
+  "position.coordinate": "Position",
+  "size": "Size",
+  "height": "Height",
+  "width": "Width",
+  "sign.eKYC": "Sign eKYC",
+  "choose.signer": "Choose signer",
+  "choose.importer": "Choose importer",
   "user.import": "Importer",
-  "contract.file.name":"Contract file name",
-  "sign.by.pki":"Sign by Sim PKI",
-  "sign.image.otp":"Sign image and OTP",
-  "sign.image.ekyc":"Sign image or eKYC",
-  "sign.digital":"Sign digital",
-  "auto.scroll":"Auto scroll",
-  "preview":"Preview",
+  "contract.file.name": "Contract file name",
+  "sign.by.pki": "Sign by Sim PKI",
+  "sign.image.otp": "Sign image and OTP",
+  "sign.image.ekyc": "Sign image or eKYC",
+  "sign.digital": "Sign digital",
+  "auto.scroll": "Auto scroll",
+  "preview": "Preview",
   "contract": "CONTRACT",
   "partner": "PARTNER",
-  "canceller":"Canceller",
-
-  "download":"Download",
+  "canceller": "Canceller",
+  "download": "Download",
   "Đang ký": "Signing",
   "canceled": "Canceled",
-  "refused":"Refused",
-  "overdued":"Overdued",
-  "Đang điều phối":"Coordinator",
+  "refused": "Refused",
+  "overdued": "Overdued",
+  "Đang điều phối": "Coordinator",
   "Đang xem xét": "Considering",
-  "view.reason":"Reason",
-  "resend.sms.email":"Resend Sms/Email",
-  "author.handing":"AUTHORIZATION OF HANDLING",
-  "Chưa ký":"Unsigned",
-  "stop.releasing":"Stop releasing",
+  "view.reason": "Reason",
+  "resend.sms.email": "Resend Sms/Email",
+  "author.handing": "AUTHORIZATION OF HANDLING",
+  "Chưa ký": "Unsigned",
+  "stop.releasing": "Stop releasing",
   "choose.template.contract": "Choose template contract",
-  "old.password.not.blank":"Old password cannot be blank",
-  "new.password.not.blank":"New password cannot be blank",
-  "confirm.new.password.not.blank":"Confirm new password cannot be blank",
-  "no.contract.involved":"No contract involved",
-  "file.not.empty":"The document file cannot be empty!",
-  "contract.template.name.not.blank":"Contract template name cannot be blank!",
-  "send.sms.email":"Send Sms/Email Success!",
-  "change.password":"CHANGE PASSWORD",
-  "reject.contract":"REASON FOR CONTRACT REJECT",
-  "contract.reject":"Reason for contract reject",
-  "contract.uid":"Contract code",
-    "please.choose.contract.template":"Please choose a contract template!",
-    "please.choose.contract.name":"Please choose a contract name!",
-    "Sign.expiration.date.compare":"Signing expiration date should not be less than current date!",
-    "update.person-process": "Update handler"
+  "old.password.not.blank": "Old password cannot be blank",
+  "new.password.not.blank": "New password cannot be blank",
+  "confirm.new.password.not.blank": "Confirm new password cannot be blank",
+  "no.contract.involved": "No contract involved",
+  "file.not.empty": "The document file cannot be empty!",
+  "contract.template.name.not.blank": "Contract template name cannot be blank!",
+  "send.sms.email": "Send Sms/Email Success!",
+  "change.password": "CHANGE PASSWORD",
+  "reject.contract": "REASON FOR CONTRACT REJECT",
+  "contract.reject": "Reason for contract reject",
+  "contract.uid": "Contract code",
+  "please.choose.contract.template": "Please choose a contract template!",
+  "please.choose.contract.name": "Please choose a contract name!",
+  "Sign.expiration.date.compare": "Signing expiration date should not be less than current date!",
+  "update.person-process": "Update handler",
+  "contract-type.ceca":"Push contract file to CeCa",
+  "yes":"Yes",
+  "no":"No"
 }
