--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -505,5 +505,8 @@
   "please.choose.contract.name":"Vui lòng nhập tên hợp đồng!",
   "Sign.expiration.date.compare":"Ngày hết hạn ký không được nhỏ hơn ngày hiện tại!",
   "verified.cardid":"Đã xác thực qua chứng minh thư/căn cước công dân",
-  "update.person-process": "Cập nhật người xử lý"
+  "update.person-process": "Cập nhật người xử lý",
+  "contract-type.ceca":"Đẩy file hợp đồng lên Bộ Công thương",
+  "yes":"Có",
+  "no":"Không"
 }
