--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -510,5 +510,6 @@
   "yes":"Có",
   "no":"Không",
   "file.import.valid":"File import không đúng định dạng",
-  "file.import.valid.result":"File import không đúng định dạng, vui lòng xem thông báo lỗi ở file vừa tải về"
+  "file.import.valid.result":"File import không đúng định dạng, vui lòng xem thông báo lỗi ở file vừa tải về",
+  "taxcode.out":"Vui lòng nhập mã số thuế/CMT/CCCD ngoài luồng hợp đồng"
 }
