--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -397,6 +397,7 @@
   "tax_code.cardId": "Tax code/Card Id",
   "info.token": "Information in USB Token",
   "enter.tax_code.cardId": "Enter tax code or card id",
+  "info.hsm":"Information in HSM",
   "enter.tax.code": "Enter tax code",
   "enter.cardId": "Enter card id",
   "cardId": "Card Id",
