--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -278,7 +278,7 @@
   "organization.partner.name": "Tên đối tác",
   "scale": "Quy mô",
   "address": "Địa chỉ",
-  "tax_code": "Mã số thuế",
+  "tax_code": "Mã số thuế/CMT/CCCD",
   "representative": "Người đại diện",
   "position": "Chức vụ",
   "btn.sendRequest": "Gửi yêu cầu",
@@ -436,8 +436,8 @@
   "password.level2.blank":"Mật khẩu cấp 2 không được để trống",
   "user.blank":"Tên người dùng không dược để trống",
   "username":"Tên người dùng",
-  "taxcode.blank":"Mã số thuế không được để trống",
-  "taxcode.format":"Mã số thuế không đúng định dạng",
+  "taxcode.blank":"Mã số thuế/CMT/CCCD không được để trống",
+  "taxcode.format":"Mã số thuế/CMT/CCCD không đúng định dạng",
   "package.information":"THÔNG TIN GÓI CƯỚC",
   "contract.used":"Số lượng hợp đồng đã sử dụng:",
   "ekyc.used":"Số lượng eKYC đã sử dụng:",
