--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -512,5 +512,6 @@
   "no":"Không",
   "file.import.valid":"File import không đúng định dạng",
   "file.import.valid.result":"Dữ liệu import không hợp lệ, vui lòng xem thông báo lỗi tại file hệ thống trả về",
-  "taxcode.out":"Vui lòng nhập mã số thuế/CMT/CCCD ngoài luồng hợp đồng"
+  "taxcode.out":"Vui lòng nhập mã số thuế/CMT/CCCD ngoài luồng hợp đồng",
+  "end":"Kết thúc"
 }
