--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -245,6 +245,7 @@
   "error.confirm-password-new.required": "Confirm password new is required",
   "error.confirm-password-new.incorrect": "Confirm password new is incorrect",
   "error.contract.name.required": "Contract name is required",
+  "error.ceca.required":"Do not leave the contract file push to the Ministry of Industry and Trade empty",
   "error.contract.file.required": "Contract file is required",
   "error.user.name.required": "Name is required",
   "error.user.email.required": "Email is required",
