update sms song ngu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,8 @@
   "language_icon": "db_icon_english",
   "language_en": "English",
   "language_vi": "Vietnam",
+  "vie": "VIE",
+  "eng": "ENG",
   "notification": "Notification",
   "account": "Account",
   "login": "Login",
@@ -139,6 +141,7 @@
   "user.doc": "Document maker",
   "user.lead": "Leader",
   "user.name": "Name",
+  "sms.locale": "SMS Locale",
   "user.email": "Email",
   "user.sign-type": "Sign type",
   "user.otp": "OTP",
