--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -3,6 +3,8 @@
   "language_icon": "db_icon_vietnam",
   "language_en": "Tiếng Anh",
   "language_vi": "Tiếng Việt",
+  "vie": "VIE",
+  "eng": "ENG",
   "notification": "Thông báo",
   "account": "Tài khoản",
   "login": "Đăng nhập",
@@ -139,6 +141,7 @@
   "user.doc": "Văn thư",
   "user.lead": "Người điều phối",
   "user.name": "Họ tên",
+  "sms.locale": "Ngôn ngữ sms",
   "user.email": "Email",
   "user.sign-type": "Loại ký",
   "user.otp": "OTP",
