--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -393,6 +393,7 @@
   "sign_by_eKYC":"Ký bằng eKYC",
   "sign_by_otp":"Ký ảnh vs OTP",
   "sign.multi":"Ký nhiều",
+  "watch.contract":"Xem HĐ",
   "not.have.sample.file":"Bạn chưa có file mẫu?",
   "download.sample.file":"Tải file mẫu",
   "expire.date.contract":"Ngày hết hiệu lực hợp đồng",
