--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -524,5 +524,7 @@
   "email.exist": "Email already exist",
   "phone.exist": "Phone already exist",
   "taxcode.exist": "MST/CMT/CCCD already exist",
-  "recipients.not.found": "Recipientid not found"
+  "recipients.not.found": "Recipientid not found",
+  "error.contract.name.valid": "Contract name must not contain special characters",
+  "error.password.valid":"Password must have at least 1 uppercase, lowercase, special characters and the length of 8 characters or more"
 }
